# auroraswap-farm-calculator

./: .gitignore  app.py  pyproject.toml  requirements.txt
auroraswap/: auroraswap.py
